2003-06-04  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* control/base/__stepimp__.m, control/base/nichols.m,
	control/base/nyquist.m, miscellaneous/dump_prefs.m,
	plot/bottom_title.m, plot/mplot.m, plot/multiplot.m,
	plot/oneplot.m, plot/plot_border.m, plot/subplot.m,
	plot/subwindow.m, plot/top_title.m, signal/freqz_plot.m:
	Eliminate gnuplot_has_multiplot (assume it is always true).

2003-05-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in, image/Makefile.in, startup/Makefile.in: Handle DESTDIR.

2003-05-05  Andy Adler <adler@site.uottawa.ca>

	* plot/hist.m: Improve performance by using different algorithms
	depending on number of bins.

2003-05-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* control/system/sysadd.m: If systems are not "tf", convert before
	adding.

2003-05-01  Paul Kienzle <pkienzle@users.sf.net>

	* image/imagesc.m: Accept data limits parameter for colormap.

2003-04-11  Doug Stewart <dastew@sympatico.ca>

	* control/base/__stepimp__.m: If digital impulse, reduce gain of
	the impulse by t_step.

2003-04-07  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* control/base/__bodquist__.m: Don't convert pdbig and fdbig to
	column vectors.

2003-03-24  Quentin Spencer <qspencer@ieee.org>

	* linear-algebra/null.m: Handle empty matrix arg.

2003-03-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/shift.m: Force empty_list_elements_ok to 1.

2003-02-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* deprecated/struct_contains.m, deprecated/struct_elements.m:
	New files.

2003-02-20  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* statistics/tests/kolmogorov_smirnov_test.m: Use str2func to make
	function handle to pass to feval.
	* statistics/base/qqplot.m: Likewise.
	* statistics/base/ppplot.m: Likewise.
	* signal/spectral_xdf.m: Likewise.
	* signal/spectral_adf.m: Likewise.

2003-02-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* plot/axis.m: Avoid whitespace in literal matrix problem.

2003-02-18  John W. Eaton  <jwe@bevo.che.wisc.edu>
